force-app/main/default/objects/AF_TestDrive__c/fields/AF_Account__c.field-meta.xml
<CustomField>
    <fullName>AF_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>AF_TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>