force-app/main/default/objects/AF_TestDrive__c/fields/AF_AssignedConsultant__c.field-meta.xml
<CustomField>
    <fullName>AF_AssignedConsultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually assigned — no ServiceResource scheduling.</description>
    <label>Assigned Sales Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>AF_TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>