force-app/main/default/objects/AF_TestDrive__c/fields/AF_CompletedSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>AF_CompletedSyncStatus__c</fullName>
    <label>TEST_DRIVE_COMPLETED Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>