force-app/main/default/objects/AF_TestDrive__c/fields/AF_CRMExperienceFeedback__c.field-meta.xml
<CustomField>
    <fullName>AF_CRMExperienceFeedback__c</fullName>
    <description>Separate CRM follow-up capture.</description>
    <label>CRM Experience Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>