force-app/main/default/objects/AF_TestDrive__c/fields/AF_KeyloopVisibilityRequired__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopVisibilityRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TEST_DRIVE_* events only if business wants Keyloop visibility.</description>
    <label>Keyloop Visibility Required?</label>
    <type>Checkbox</type>
</CustomField>