force-app/main/default/objects/AF_TestDrive__c/fields/AF_Location__c.field-meta.xml
<CustomField>
    <fullName>AF_Location__c</fullName>
    <description>Manually captured; showroom list pending.</description>
    <label>Location / Showroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>