force-app/main/default/objects/AF_TestDrive__c/fields/AF_Product__c.field-meta.xml
<CustomField>
    <fullName>AF_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>AF_TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>