force-app/main/default/objects/AF_TestDrive__c/fields/AF_ProductFeedback__c.field-meta.xml
<CustomField>
    <fullName>AF_ProductFeedback__c</fullName>
    <description>Sales-captured post-drive.</description>
    <label>Product Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>