force-app/main/default/objects/AF_TestDrive__c/fields/AF_RefusedRemarks__c.field-meta.xml
<CustomField>
    <fullName>AF_RefusedRemarks__c</fullName>
    <description>Mandatory when Result = Refused — enforce via validation rule.</description>
    <label>Refused Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>