force-app/main/default/objects/AF_TestDrive__c/fields/AF_Result__c.field-meta.xml
<CustomField>
    <fullName>AF_Result__c</fullName>
    <description>Mandatory before opportunity progression.</description>
    <label>Test Drive Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>