force-app/main/default/objects/AF_TestDrive__c/fields/AF_StageGatePassed__c.field-meta.xml
<CustomField>
    <fullName>AF_StageGatePassed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Result recorded gates stage progression — maintain via automation.</description>
    <label>Stage Gate Passed?</label>
    <type>Checkbox</type>
</CustomField>