force-app/main/default/objects/AF_TestDrive__c/fields/AF_TestDriveDateTime__c.field-meta.xml
<CustomField>
    <fullName>AF_TestDriveDateTime__c</fullName>
    <description>Manually captured — no Scheduler engine, no slot availability.</description>
    <label>Scheduled Date / Time</label>
    <type>DateTime</type>
</CustomField>