force-app/main/default/objects/AF_TestDrive__c/fields/AF_TimeSlot__c.field-meta.xml
<CustomField>
    <fullName>AF_TimeSlot__c</fullName>
    <description>Fixed 30-minute showroom slot for the scheduled test drive. Paired with AF_Vehicle__c to detect double-booking (AF_FL_TestDrive_PreventDoubleBooking) — the exact-match conflict key is AF_TestDriveDateTime__c, which the scheduler always derives deterministically from Date + this slot.</description>
    <label>Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>9:30 AM</fullName>
            </value>
            <value>
                <fullName>10:00 AM</fullName>
            </value>
            <value>
                <fullName>10:30 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:30 AM</fullName>
            </value>
            <value>
                <fullName>12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:30 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>1:30 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM</fullName>
            </value>
            <value>
                <fullName>2:30 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM</fullName>
            </value>
            <value>
                <fullName>3:30 PM</fullName>
            </value>
            <value>
                <fullName>4:00 PM</fullName>
            </value>
            <value>
                <fullName>4:30 PM</fullName>
            </value>
            <value>
                <fullName>5:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>