force-app/main/default/objects/AF_TestDrive__c/fields/AF_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>AF_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually selected — demo/test-drive vehicle pool pending client; no resource engine.</description>
    <label>Vehicle</label>
    <referenceTo>Vehicle</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>AF_TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>