force-app/main/default/objects/AF_TestDrive__c/fields/AF_VehicleDefinition__c.field-meta.xml
<CustomField>
    <fullName>AF_VehicleDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used where no specific vehicle is chosen.</description>
    <label>Vehicle Definition</label>
    <referenceTo>VehicleDefinition</referenceTo>
    <relationshipLabel>Test Drives</relationshipLabel>
    <relationshipName>AF_TestDrives</relationshipName>
    <type>Lookup</type>
</CustomField>