force-app/main/default/objects/AF_TestDrive__c/validationRules/AF_VR_TestDrive_ScheduledNeedsDateLoc.validationRule-meta.xml
<ValidationRule>
    <fullName>AF_VR_TestDrive_ScheduledNeedsDateLoc</fullName>
    <active>true</active>
    <description>Status cannot be set to Scheduled unless both Scheduled Date/Time and Location are populated.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(AF_Status__c, &quot;Scheduled&quot;),
    OR(
        ISBLANK(AF_Location__c),
        ISBLANK(AF_TestDriveDateTime__c)
    )
)</errorConditionFormula>
    <errorMessage>Status cannot be set to Scheduled until both Scheduled Date/Time and Location are filled in.</errorMessage>
</ValidationRule>